--- a/KLS_WEB/KLS_WEB/Views/Security/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Security/Index.cshtml
@@ -76,10 +76,10 @@
                                 <label class="">Correo</label>
                                 <input type="email" class="form-control" name="email" id="email" required />
                             </div>
-                            @*<div class="col-md-4">
+                            <div class="col-md-4">
                                 <label class="">Contraseña</label>
                                 <input type="text" class="form-control" name="password" id="password" required style="text-transform: none;" />
-                            </div>*@
+                            </div>
                             <div class="col-md-4">
                                 <label class="">Tipo usuario</label>
                                 <select class="form-control form-control-sm" id="Rol" name="Rol">
