--- a/KLS_WEB/KLS_WEB/Views/Offer/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Offer/Index.cshtml
@@ -314,7 +314,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                <button type="button" class="btn btn-secondary" onclick="agregarOferta();" id="btnGuardar">Agregar oferta</button>
+                <button type="button" class="btn btn-secondary" onclick="agregarOferta();" id="btnGuardar"><spam id="txtOferta">Agregar oferta</spam></button>
             </div>
         </div>
     </div>
@@ -360,8 +360,6 @@
     <script>
 
         function agregarOferta() {//Metodo de agregar la oferta
-            $("#btnGuardar").prop("disabled", true);
-            console.log("-------------");
             jsonEnv = [];
             var regionO = 0;
             var estadoO = 0;
@@ -454,13 +452,12 @@
         function verModal(ide = 0) {
             idEditar = ide;
             if (idEditar != 0) {
+                $("#txtOferta").empty().html("Editar oferta");
                 $.get("Offer/obOferta/" + idEditar, function (res) {
-                    console.log(res);
                     $('#idtransportista').val(parseInt(res.transportista)).trigger('change');
                     //$('#idtipounidad').val(parseInt(res.tipo_De_Unidad)).trigger('change');
                     $('#txtCantidad').val(parseInt(res.cantidad));
                     $('#txtFechaDisponibilidad').val(res.fecha_Disponibilidad);
-                    console.log(res.fecha_Disponibilidad);
                     $('#txtRangoEspera').val(res.rango_De_Espera);
                     $('#txtNivelOrigen').val(cUpper(res.nivel_Origen)).trigger('change');
                     $('#tiposServicios').val(res.idServiceTypes).trigger('change');
@@ -493,6 +490,7 @@
                 });
                 $("#modalAgregar").modal("show");
             } else {
+                $("#txtOferta").empty().html("Agregar oferta");
                 limpiarCampos();
                 $("#modalAgregar").modal("show");
             }
@@ -557,9 +555,6 @@
                 table.destroy();
                 $("#b-table").empty();
                 $.each(dataXLSX, function (data, item) {
-
-                    //console.log(item);
-
                     var itemT = Object.keys(item);
                     var fechaJs = moment(item[itemT[3]]).format('YYYY-MM-DD HH:mm:ss') + ".000000";
                     jsonEnv.push(
@@ -645,7 +640,6 @@
                         jsonEnv = [];
 
                     }).fail(function (error) {
-                        console.log("error", "Error al insertar" + error);
                         $("#btnGuardar").attr("disabled", false);
                         dToast("error", "Error al insertar", "Error");
                     });
@@ -654,10 +648,8 @@
                         Ofertas();
                         dToast("success", "Datos actualizados con éxito", "Atención");
                     }).fail(function (error) {
-                        console.log("error", "Error al actualizar" + error);
                         dToast("error", "Error al insertar", "Error");
                     });
-                    //console.log(jsonGuardar[0]);
                 }
             } else {
                 $("#btnGuardar").attr("disabled", false);
@@ -726,24 +718,16 @@
 
                 if (transportista >= 0) { //Si se encontró el transportista
                     idtran = catTransportista[transportista].id
-                    //unidades = catUnidades.findIndex(service => cUpper(service.nombre) == cUpper(key.Tipo_De_Unidad));
-                    //if (unidades >= 0) {//Se encontraron unidades
-
-                        console.log(ServiceTypes);
                         let tipoServiciocat = ServiceTypes.findIndex(service => cUpper(service.name).trim() == cUpper(key.IdServiceTypes).trim());
                         if (tipoServiciocat >= 0) {
-                            //idunidad = catUnidades[unidades].id;
-                            //tipoServicio = ServiceTypes[tipoServiciocat].id;
                             var Nivel_Origen = cUpper(key.Nivel_Origen);
                             if (Nivel_Origen != "REGION" && Nivel_Origen != "ESTADO" && Nivel_Origen != "CIUDAD") {
-                                //console.log("Esta region no pertenece  a ningun dato", Nivel_Origen); //<-----------------------------------------------------
                                 jsonEnvIncorrectos.push(key);
                                 return;
                             } else {
                                 if (Nivel_Origen == "REGION") {
                                     regionOrigen = catRegion.findIndex(r => cUpper(r.nombre) == cUpper(key.Region_Origen));
-                                    if (regionOrigen < 0) { //Si se encontro la region
-                                        //console.log("No se encontro region", key.NivelOrigen);
+                                    if (regionOrigen < 0) {
                                         jsonEnvIncorrectos.push(key);
                                         return;
                                     } else {
@@ -753,7 +737,6 @@
                                 if (Nivel_Origen == "ESTADO") { //Validar cuando la region es estado
                                     estadoOrigen = catEstado.findIndex(es => cUpper(es.nombre) == cUpper(key.Estado_Origen));
                                     if (estadoOrigen < 0) {
-                                        //console.log("No se encontro ningun estado origen", key.Estado_Origen);
                                         jsonEnvIncorrectos.push(key);
                                         return;
                                     } else {
@@ -763,9 +746,7 @@
                                 if (Nivel_Origen == "CIUDAD") {
                                     estadoOrigen = catEstado.findIndex(es => cUpper(es.nombre) == cUpper(key.Estado_Origen));
                                     ciudadOrigen = catCiudad.findIndex(ci => cUpper(ci.nombre) == cUpper(key.ciudad_Origen).replace(/[^a-zA-Z ]/g, ""));
-
                                     if (estadoOrigen < 0 || ciudadOrigen < 0) {
-                                        console.log("No se encontro nada con ciudad origen 767", key.Transportista, key.ciudad_Origen);
                                         jsonEnvIncorrectos.push(key);
                                         return;
                                     } else {
@@ -774,18 +755,15 @@
                                     }
                                 }
                             }
-
                             //Nivel Destino <-----------------------------------------------------------------------------------
                             var Nivel_Destino = cUpper(key.Nivel_Destino);
                             if (Nivel_Destino != "REGION" && Nivel_Destino != "ESTADO" && Nivel_Destino != "CIUDAD") {
-                                console.log("780", Nivel_Destino);
                                 jsonEnvIncorrectos.push(key);
                                 return;
                             } else {
                                 if (Nivel_Destino == "REGION") {
                                     regionDestino = catRegion.findIndex(r => cUpper(r.nombre) == cUpper(key.Region_Destino));
                                     if (regionDestino < 0) { //Si se encontro la region
-                                        console.log("linea 787", key.Nivel_Destino);
                                         jsonEnvIncorrectos.push(key);
                                         return;
                                     } else {
@@ -795,7 +773,6 @@
                                 if (Nivel_Destino == "ESTADO") { //Validar cuando la region es estado
                                     estadoDestino = catEstado.findIndex(es => cUpper(es.nombre) == cUpper(key.estado_Destino));
                                     if (estadoDestino < 0) {
-                                        console.log("linea 797", key);
                                         jsonEnvIncorrectos.push(key);
                                         return;
                                     } else {
@@ -807,7 +784,6 @@
                                     ciudadDestino = catCiudad.findIndex(ci => cUpper(ci.nombre) == cUpper(quitarAcentos(key.ciudad_Destino)));
   
                                     if (estadoDestino < 0 || ciudadDestino < 0) {
-                                        console.log("No se encontro nada con ciudad destino", key);
                                         jsonEnvIncorrectos.push(key);
                                         return;
                                     } else {
@@ -818,19 +794,10 @@
                             }
                         //---------------------------------------------
                         } else {
-                            console.log("No se encontro tipo de servicio");
-                            console.log(key);
                             jsonEnvIncorrectos.push(key);
                             return;
                         }
-
-                    //} else {//No se encontraron unidades
-                    //    console.log("No se encontro unidad", key.Tipo_De_Unidad);
-                    //    jsonEnvIncorrectos.push(key);
-                    //    return;
-                    //}
                 } else { //No se encontro el transportista
-                    console.log("No se encontro transportista", key.Transportista);
                     jsonEnvIncorrectos.push(key);
                     return;
                 }
@@ -1012,10 +979,7 @@
                         </tr>`);
                     ver(key.idoferta, moment(key.fechadisponibilidad).format('YYYY-MM-DD HH:mm:ss'));
                     } else {
-                        expirados.push({ 'Id': key.idoferta })
-                        console.log("La key que no paso");
-                        console.log(key);
-                        console.log("La key que no paso");
+                        expirados.push({ 'Id': key.idoferta });
                     }
                 });
 
@@ -1059,7 +1023,6 @@
         }
 
         function expirar() {
-            console.log(expirados);
             $.post("Offer/setExpirados", { "expirado": expirados }, function (res) {
                 expirados = [];
             });
@@ -1073,7 +1036,6 @@
         const MILLISECONDS_OF_A_DAY = MILLISECONDS_OF_A_HOUR * 24
 
         function ver(id, fecha) {
-            console.log(id, fecha);
             var i = 0;
             var timer = setInterval(function () {
                 var fechaJs = moment().format('YYYY-MM-DD H:mm:ss');
