+Convert offer to travel beta

--- a/KLS_WEB/KLS_WEB/Views/Offer/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Offer/Index.cshtml
@@ -972,7 +972,7 @@
                                 <a class="btn btn-sm" href="#" onclick="verModal(${key.idoferta})">
                                     <span style="color:blue;" class="material-icons">edit</span>
                                 </a>
-                                <a class="btn btn-sm ${btndisabled}" href="/Offer/SetFullTravel?OfferId=${key.idoferta}">
+                                <a class="btn btn-sm ${btndisabled}" href="/Travels/ConvertTravel/${key.idoferta}?type=offer">
                                     <span style="color:blue;" class="material-icons">local_shipping</span>
                                 </a>
                             </td>
