--- a/KLS_WEB/KLS_WEB/Views/Travels/_Service.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/_Service.cshtml
@@ -44,7 +44,7 @@
                                 <div class="form-group mt-3">
                                     <label class="col-form-label col-form-label-sm font-weight-bold">TRANSPORTISTA</label>
                                     <div>
-                                        <select asp-items="Model.Selects.Carriers" name="carrierid" id="carrier-@service" class="form-control form-control-sm" style="width: 100%;" onchange="getOperadores(this.value, '@service')"></select>
+                                        <select asp-for="CarrierId" asp-items="Model.Selects.Carriers" name="carrierid" id="carrier-@service" class="form-control form-control-sm" style="width: 100%;" onchange="getOperadores(this.value, '@service')"></select>
                                     </div>
                                 </div>
                                 <div class="form-group mt-3">
